tictactoe works need to fix replay