@@ -8,8 +8,8 @@
   <name>client-tictactoe</name>
   <url>http://maven.apache.org</url>
   <properties>
-    <maven.compiler.source>20</maven.compiler.source>
-    <maven.compiler.target>20</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
   <dependencies>
 
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>com.jawue</groupId>
       <artifactId>milkyway</artifactId>
-      <version>1.3-SNAPSHOT</version>
+      <version>1.6-SNAPSHOT</version>
     </dependency>
 
 
@@ -68,16 +68,7 @@
           </executions>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>20</source>
-          <target>20</target>
 
-          <compilerArgs><arg>--enable-preview</arg></compilerArgs>
-        </configuration>
-      </plugin>
 
 
 
